# thordata-mcp-server

./: .cursorrules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Caddyfile  DOCKER_TEST.md  Dockerfile  README.md  acceptance_test.py  acceptance_test_v2.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: ci.yml
cursor-config/: README.md  SETUP.md  mcp.json
scripts/: acceptance_analyze.py  build_and_run.sh  product_deep_test.py  product_self_check.py  product_smoke_test.py  web_scraper_acceptance.py
src/thordata_mcp/: __init__.py  browser_session.py  config.py  context.py  debug_http.py  main.py  monitoring.py  registry.py  utils.py
src/thordata_mcp/tools/: __init__.py  browser.py  commerce.py  debug.py  entrypoints.py  media.py  params_utils.py  product.py  product_compact.py  smart_scraper.py  utils.py  web.py
src/thordata_mcp/tools/control/: __init__.py  account.py  locations.py  proxy_users.py  unlimited.py  whitelist.py
src/thordata_mcp/tools/data/: __init__.py  browser.py  proxy.py  serp.py  tasks.py  universal.py
tests/: test_tools.py
