[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thordata-mcp-server"
version = "0.3.0"
description = "Official MCP Server for Thordata."
authors = [{name = "Thordata Developer Team", email = "support@thordata.com"}]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "thordata-sdk>=1.6.0",
    "pydantic-settings",
    "markdownify",
    "html2text",
    "python-dotenv",
    "httpx"
]

[project.scripts]
thordata-mcp = "thordata_mcp.main:main"